YLP-695 Fix legend overlap in daily bolus graph (#473)

--- a/packages/blip/app/components/patient-data.less
+++ b/packages/blip/app/components/patient-data.less
@@ -243,7 +243,7 @@ a.js-home {
 
 .patient-data-chart {
   width: 100%;
-  height: 590px;
+  height: 630px;
 }
 
 .patient-data-chart-growing {
