--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -114,10 +114,10 @@ svg {
   tspan {
     font-size: @font-size-labels;
     fill: @text;
-    &.main {
+    &.label-main {
       font-weight: 600;
     }
-    &.light {
+    &.label-light {
       font-weight: 300;
     }
 
